長い名前表示や質問投稿のテストと、ランキングの表示の修正

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11446,7 +11446,7 @@ body {
   font-family: "Source Sans Pro", arial, sans-serif;
   border: 1px solid #cecece;
   background: #d7d7d7;
-  color: #FAFAFA;
+  color: #606060;
   border-radius: 5px;
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
