--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -551,7 +551,7 @@ body {
         font-family: 'Source Sans Pro',arial,sans-serif;
         border: 1px solid #cecece;
         background: #d7d7d7;
-        color:#FAFAFA;
+        color:#606060;
         -webkit-border-radius: 5px;
         -moz-border-radius: 5px;
         border-radius: 5px;
