--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -211,6 +211,7 @@ body {
   }
 }
 
+
 .body-inner-of-index {
   
   .question{
@@ -281,192 +282,6 @@ body {
     }
   }
 }
-
-.modal {
-  
-  .modal-user-btn {
-    color: #606060;
-    font-size: 17.6px;
-    --font-family-sans-serif: "Nunito", sans-serif;
-    
-    &:hover{
-      background-color: #ebebeb !important;
-      color: #aa4cd3 !important;
-    }
-  }
-}
-  
-.question-show-inner {
-  
-  .question{
-    border-bottom: 15px solid #FBF0FF !important;
-    
-    .card-body {
-      font-size: 1.0rem;
-    }
-    .category-link {
-      background-color: transparent;
-      color: #606060;
-      font-size: 1.0rem !important;
-    }
-    
-    .detail-btn {
-      background: none;
-    	border: none;
-    	outline: none;
-    	-webkit-appearance: none;
-    	-moz-appearance: none;
-    	appearance: none;
-    }
-    
-    .good-btn {
-      font-size: 1.1rem !important;
-    }
-    
-    .index-paginate {
-      .pagination {
-          margin:15px auto;
-          text-align: center;
-      }
-    }
-    
-    .user-name {
-      font-size: 1.2rem;
-    }
-  }
-  
-  .answers {
-      
-    .card-body {
-      font-size: 1.0rem;
-    }
-    
-    .comment-flow-line {
-      background-color: rgba(170, 76, 211, 0.5);
-      display: block;
-      flex-grow: 1;
-      margin-left: auto;
-      margin-right: auto;
-      margin-top: 4px;
-      width: 2px;
-      -webkit-box-flex: 1;
-    }
-    
-    .detail-btn {
-      background: none;
-    	border: none;
-    	outline: none;
-    	-webkit-appearance: none;
-    	-moz-appearance: none;
-    	appearance: none;
-    }
-    
-    .good-btn {
-      font-size: 1.1rem !important;
-    }
-    
-    .index-paginate {
-      .pagination {
-          margin:15px auto;
-          text-align: center;
-      }
-    }
-    
-    .user-name {
-      font-size: 1.2rem;
-    }
-    
-  }
-}
-  
-
-.user-show {
-  .modal-open-btn {
-    background: none;
-  	border: none;
-  	outline: none;
-  	-webkit-appearance: none;
-  	-moz-appearance: none;
-  	appearance: none;
-  }
-  
-  .profile-image {
-    height: auto;
-    width: 100%;
-  }
-  
-  .profile-image-wrapper {
-    padding: 1.5rem 20%;
-  }
-  
-  .user-profile {
-    background: rgba(255, 255, 255, 1);
-    border-radius: 20px;
-    padding: 30px;
-    position: relative;
-    
-    &:after {
-      background: repeating-linear-gradient(45deg, #aa4cd3, #aa4cd3 3px, white 3px, rgba(170, 76, 211, 0.7) 6px);
-      background-color: black;
-      border-radius: 23px;
-      content: '';
-      position: absolute;
-      top: -5px; bottom: -5px;
-      left: -5px; right: -5px;
-      z-index: -1;
-    }
-  }
-}
-
-// トップへ戻るボタン
-  #page_top{
-    width: 50px;
-    height: 50px;
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
-    background: #aa4cd3;
-    opacity: 0.6;
-    border-radius: 50%;
-    z-index:10;
-  
-    & a{
-      position: relative;
-      display: block;
-      width: 50px;
-      height: 50px;
-      text-decoration: none;
-    
-      &:before{
-        font-family: 'Font Awesome 5 Free';
-        font-weight: 900;
-        content: '\f102';
-        font-size: 25px;
-        color: #fff;
-        position: absolute;
-        width: 25px;
-        height: 25px;
-        top: -3px;
-        bottom: 0;
-        right: 0;
-        left: 0;
-        margin: auto;
-        text-align: center;
-      }
-    }
-  }
-  
-  
-  // 各ページ画像表示用
-  .image {
-    height: 120px;
-    object-fit: cover;
-    
-    @media screen and (max-width: 576px) {
-      height: 90px;
-    }
-  }
-  
 
 
 .create-edit-page {
@@ -742,5 +557,202 @@ body {
       }
     }
   }
+}
+
+
+.modal {
   
+  .modal-user-btn {
+    color: #606060;
+    font-size: 17.6px;
+    --font-family-sans-serif: "Nunito", sans-serif;
+    
+    &:hover{
+      background-color: #ebebeb !important;
+      color: #aa4cd3 !important;
+    }
+  }
+}
+  
+  
+.question-show-inner {
+  
+  .question{
+    border-bottom: 15px solid #FBF0FF !important;
+    
+    .card-body {
+      font-size: 1.0rem;
+    }
+    .category-link {
+      background-color: transparent;
+      color: #606060;
+      font-size: 1.0rem !important;
+    }
+    
+    .detail-btn {
+      background: none;
+    	border: none;
+    	outline: none;
+    	-webkit-appearance: none;
+    	-moz-appearance: none;
+    	appearance: none;
+    }
+    
+    .good-btn {
+      font-size: 1.1rem !important;
+    }
+    
+    .index-paginate {
+      .pagination {
+          margin:15px auto;
+          text-align: center;
+      }
+    }
+    
+    .user-name {
+      font-size: 1.2rem;
+    }
+  }
+  
+  .answers {
+      
+    .card-body {
+      font-size: 1.0rem;
+    }
+    
+    .comment-flow-line {
+      background-color: rgba(170, 76, 211, 0.5);
+      display: block;
+      flex-grow: 1;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 4px;
+      width: 2px;
+      -webkit-box-flex: 1;
+    }
+    
+    .detail-btn {
+      background: none;
+    	border: none;
+    	outline: none;
+    	-webkit-appearance: none;
+    	-moz-appearance: none;
+    	appearance: none;
+    }
+    
+    .good-btn {
+      font-size: 1.1rem !important;
+    }
+    
+    .index-paginate {
+      .pagination {
+          margin:15px auto;
+          text-align: center;
+      }
+    }
+    
+    .user-name {
+      font-size: 1.2rem;
+    }
+  }
+}
+  
+
+.user-show {
+  .modal-open-btn {
+    background: none;
+  	border: none;
+  	outline: none;
+  	-webkit-appearance: none;
+  	-moz-appearance: none;
+  	appearance: none;
+  }
+  
+  .profile-image {
+    height: auto;
+    width: 100%;
+  }
+  
+  .profile-image-wrapper {
+    padding: 1.5rem 20%;
+  }
+  
+  .user-profile {
+    background: rgba(255, 255, 255, 1);
+    border-radius: 20px;
+    padding: 30px;
+    position: relative;
+    
+    &:after {
+      background: repeating-linear-gradient(45deg, #aa4cd3, #aa4cd3 3px, white 3px, rgba(170, 76, 211, 0.7) 6px);
+      background-color: black;
+      border-radius: 23px;
+      content: '';
+      position: absolute;
+      top: -5px; bottom: -5px;
+      left: -5px; right: -5px;
+      z-index: -1;
+    }
+  }
+}
+
+
+// トップへ戻るボタン
+#page_top{
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  background: #aa4cd3;
+  opacity: 0.6;
+  border-radius: 50%;
+  z-index:10;
+
+  & a{
+    position: relative;
+    display: block;
+    width: 50px;
+    height: 50px;
+    text-decoration: none;
+  
+    &:before{
+      font-family: 'Font Awesome 5 Free';
+      font-weight: 900;
+      content: '\f102';
+      font-size: 25px;
+      color: #fff;
+      position: absolute;
+      width: 25px;
+      height: 25px;
+      top: -3px;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      margin: auto;
+      text-align: center;
+    }
+  }
+}
+  
+  
+// 各ページ画像表示用
+.image {
+  height: 120px;
+  object-fit: cover;
+  
+  @media screen and (max-width: 576px) {
+    height: 90px;
+  }
+}
+
+
+// いいね機能用
+.liked {
+  color: #aa4cd3 !important;
+}
+
+.like-btn {
+  color: #8c8c8c;
+  font-size: 23px;
 }
