main最小の高さ指定

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10932,6 +10932,10 @@ a.text-dark:focus {
   }
 }
 
+main {
+  min-height: 600px;
+}
+
 *:focus {
   outline: none !important;
   box-shadow: none !important;
