--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,11 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+
+main {
+  min-height: 600px;
+}
+
 *:focus {
   outline: none !important;
   box-shadow:none !important;
