スマホサイズでの質問表示画面のドロップダウンメニューの位置変更

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11503,6 +11503,15 @@ body {
   appearance: none;
 }
 
+@media screen and (max-width: 576px) {
+  .question-show-inner .question .dropdown-menu[x-placement^=top],
+  .question-show-inner .question .dropdown-menu[x-placement^=right],
+  .question-show-inner .question .dropdown-menu[x-placement^=bottom],
+  .question-show-inner .question .dropdown-menu[x-placement^=left] {
+    left: -60px !important;
+  }
+}
+
 .question-show-inner .question .good-btn {
   font-size: 1.1rem !important;
 }
