--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -628,6 +628,11 @@ body {
       }
     }
     
+    .share-btn {
+      color: #1DA1F2;
+      font-size: 21px !important;
+    }
+    
     .user-name {
       font-size: 1.2rem;
     }
