--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11139,6 +11139,22 @@ body {
   margin-top: 5vh;
 }
 
+.auth-page .google-login-btn {
+  background-image: url("https://han-il-jil-mun.s3.ap-northeast-1.amazonaws.com/google_btn/btn_google_signin_dark_normal_web%402x.png");
+  background-size: cover;
+  display: inline-block;
+  height: 36.8px;
+  width: 152.8px;
+}
+
+.auth-page .google-login-btn:focus {
+  background-image: url("https://han-il-jil-mun.s3.ap-northeast-1.amazonaws.com/google_btn/btn_google_signin_dark_focus_web%402x.png");
+}
+
+.auth-page .google-login-btn:hover {
+  background-image: url("https://han-il-jil-mun.s3.ap-northeast-1.amazonaws.com/google_btn/btn_google_signin_dark_pressed_web%402x.png");
+}
+
 .body-inner-of-index .question .card-body {
   font-size: 1rem;
 }
