--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11070,6 +11070,10 @@ body {
   border-color: #aa4cd3 !important;
 }
 
+.text-success {
+  color: #aa4cd3 !important;
+}
+
 #app nav {
   margin-top: -23px !important;
   padding-top: 10px;
@@ -11488,6 +11492,24 @@ body {
 .modal .modal-user-btn:hover {
   background-color: #ebebeb !important;
   color: #aa4cd3 !important;
+}
+
+.how-to-use p {
+  font-size: 18.8px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+@media screen and (max-width: 576px) {
+  .how-to-use .explain-img {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .how-to-use .how-to-use-index {
+    width: 87% !important;
+  }
 }
 
 .question-show-inner .question {
