質問表示画面のレスポンシブデザイン強化

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11531,6 +11531,15 @@ body {
   }
 }
 
+@media screen and (max-width: 576px) {
+  .question-show-inner .dropdown-menu[x-placement^=top],
+  .question-show-inner .dropdown-menu[x-placement^=right],
+  .question-show-inner .dropdown-menu[x-placement^=bottom],
+  .question-show-inner .dropdown-menu[x-placement^=left] {
+    left: -60px !important;
+  }
+}
+
 .question-show-inner .question {
   border-bottom: 15px solid #FBF0FF !important;
 }
@@ -11558,15 +11567,6 @@ body {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-}
-
-@media screen and (max-width: 576px) {
-  .question-show-inner .question .dropdown-menu[x-placement^=top],
-  .question-show-inner .question .dropdown-menu[x-placement^=right],
-  .question-show-inner .question .dropdown-menu[x-placement^=bottom],
-  .question-show-inner .question .dropdown-menu[x-placement^=left] {
-    left: -60px !important;
-  }
 }
 
 .question-show-inner .question .good-btn {
