--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -763,8 +763,25 @@ body {
   }
   
   .profile-image {
-    height: auto;
-    width: 100%;
+    border-radius: 50%;
+    height: 306px;
+    width: 306px;
+    @media screen and (max-width: 1200px) {
+      height: 252px;
+      width: 252px;
+    }
+    @media screen and (max-width: 991px) {
+      height: 180px;
+      width: 180px;
+    }
+    @media screen and (max-width: 768px) {
+      height: 126px;
+      width: 126px;
+    }
+    @media screen and (max-width: 576px) {
+      height: 176px;
+      width: 176px;
+    }
   }
   
   .profile-image-wrapper {
